# digital-wellbeing-cloud-architecture

./: .gitignore  CITATION.cff  README.md  RUNBOOK.md  docker-compose.yml  sonar-project.properties
.github/workflows/: cd-staging.yml  ci.yml
cvs-cloud-platform/: .pre-commit-config.yaml
cvs-cloud-platform/.github/workflows/: cd-production.yml  ci.yml  ml-pipeline.yml
cvs-cloud-platform/grafana/dashboards/: organizational_health.json  platform_operations.json
cvs-cloud-platform/helm/anonymizer/: Chart.yaml  values.yaml
cvs-cloud-platform/helm/inference-svc/: Chart.yaml  (+1 more)
cvs-cloud-platform/k8s/: rbac.yaml
cvs-cloud-platform/ml/: drift_monitor.py  feature_engineering.py  generate_synthetic_dataset.py  train.py
cvs-cloud-platform/tests/: privacy_audit.py  smoke_test.py
grafana/: prometheus.yml
grafana/dashboards/: ml_performance.json
helm/rule-engine/: Chart.yaml
infra/: README.md
infra/terraform/: main.tf  variables.tf
k8s/: namespaces.yaml  network-policies.yaml
ml/: feature_engineering.py  generate_synthetic_dataset.py  plots.py  train.py  upload_model.py
ml/results/: model_metadata.json
ml/tests/: test_feature_engineering.py  test_train.py
paper/: paper-cvs-es.tex  technical-paper-en.tex
schemas/: telemetry_batch.avsc
scripts/: deploy-local.ps1
services/anonymizer/: pyproject.toml
services/anonymizer/anonymizer/: consumer.py  differential_privacy.py  main.py  pseudonymizer.py
services/inference-svc/: pyproject.toml
services/inference-svc/inference_svc/: features.py  main.py  router.py
services/inference-svc/tests/: test_scorer.py
services/normalizer/: Dockerfile  pyproject.toml
services/rule-engine/: Dockerfile  pyproject.toml
services/rule-engine/rule_engine/: consumer.py  main.py  producer.py  rules.py
services/rule-engine/tests/: test_rules.py
tests/: privacy_audit.py
(+65 files in other folders)
