[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anonymizer"
version = "1.0.0"
description = "CVS Platform — Anonymizer Microservice"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.29.0",
  "confluent-kafka==2.4.0",
  "numpy==1.26.4",
  "pydantic==2.7.1",
  "prometheus-fastapi-instrumentator==6.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.0",
  "pytest-cov==5.0.0",
  "mypy==1.10.0",
  "pylint==3.2.2"
]
