[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "inference-svc"
version = "1.0.0"
description = "CVS Platform — Inference Service"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.29.0",
  "pydantic==2.7.1",
  "numpy==1.26.4",
  "joblib==1.4.2",
  "boto3==1.34.98",
  "influxdb-client==1.42.0",
  "prometheus-fastapi-instrumentator==6.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.0",
  "pytest-cov==5.0.0",
  "mypy==1.10.0",
  "pylint==3.2.2",
  "httpx==0.27.0"
]
