[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rule-engine"
version = "1.0.0"
description = "CVS Platform — Rule Engine Microservice"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.29.0",
  "confluent-kafka==2.4.0",
  "fastavro==1.9.4",
  "pydantic==2.7.1",
  "prometheus-fastapi-instrumentator==6.1.0",
]

[project.optional-dependencies]
dev = ["pytest==8.2.0", "pytest-cov==5.0.0", "pytest-asyncio==0.23.6", "httpx==0.27.0"]
